--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Home</title>
+    <title>Ammad Hassan | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -73,8 +73,8 @@
                     <img src="assets/images/WhatsApp Image 2024-11-12 at 21.24.48_7b5eb49a.jpg" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
-                <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                <span style="display: inline;">I am  <span class="animated-text"
+                    data-words="an aspiring Biomedical Computational Researcher, Molecular Imaging Mini-fellow @Stanford, Health Technopreneur, Founder PulseAI @NYAS, Founder and President @QubAI, Quantum Qiskit @IBM, Neuroscience and Philosophy"></span>
                 </span>
                 <div>
                     <div class="social-icons">
