--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
-
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
     <meta name="application-name" content="Ammad Hassan | Home" />
     <meta name="apple-mobile-web-app-title" content="Ammad Hassan | Home" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
@@ -66,14 +67,14 @@
     </div>
     <center>
         <!-- Home Section -->
-        <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">John Doe</span>
+        <div class="text col-sm-6" style="margin-top: 140px;">Hi <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, I'm <span class="header">Ammad Hassan</span>
             <div class="center">
                 <div>
                     <img src="assets/images/WhatsApp Image 2024-11-12 at 21.24.48_7b5eb49a.jpg" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br/>
                 <span style="display: inline;">I am  <span class="animated-text"
-                    data-words="an aspiring Biomedical Computational Researcher, Molecular Imaging Mini-fellow @Stanford, Health Technopreneur, Founder PulseAI @NYAS, Founder and President @QubAI, Quantum Qiskit @IBM, Neuroscience and Philosophy"></span>
+                    data-words="an aspiring Biomedical Computation Researcher, Molecular Imaging Mini-fellow @Stanford, Health Technopreneur and Founder of PulseAI @NYAS, Founder and President @QubAI, memeber Quantum Qiskit @IBM, a neurophilosophile "></span>
                 </span>
                 <div>
                     <div class="social-icons">
