--- a/education.html
+++ b/education.html
@@ -288,15 +288,15 @@
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
-        <div class="date date1">2021-2022</div>
+        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/BCP.png'); background-repeat: no-repeat; background-size: auto;"></div>
+        <div class="date date1">2024-2025</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">Beaconhouse College Programme</h2>
+            <h6>Cambridge International AS & A Levels</h6>
+            <li>Subjects: Further Mathematics, Mathematics, Biology, Computer Science, English Language</li>
+            <li>Top 1% in Academics in the Student Body</li>
+            <li>Founding President of Quantum Computing and Artificial Intelligence Society</li>
+            <li>Beaconhouse Northern Pakistan Student Award Recipient</li>
         </div>
       </div>
    </div> 
