--- a/education.html
+++ b/education.html
@@ -261,7 +261,8 @@
                     <div class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="dropdown1 main-heading mb-0 education_head">Educational <span class="edu_background">Background</span></h2>
                         <p class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
-                            An investment in knowledge pays the best interest. – Benjamin Franklin
+                            Cogito, ergo sum: "I think, therefore I am." – René Descartes 
+                            
                         </p>
                     </div>
                 </div>
@@ -293,10 +294,10 @@
         <div>
             <h2 class="timelineHeading">Beaconhouse College Programme</h2>
             <h6>Cambridge International AS & A Levels</h6>
-            <li>Subjects: Further Mathematics, Mathematics, Biology, Computer Science, English Language</li>
-            <li>Top 1% in Academics in the Student Body</li>
-            <li>Founding President of Quantum Computing and Artificial Intelligence Society</li>
-            <li>Beaconhouse Northern Pakistan Student Award Recipient</li>
+            <li>Subjects: Further Mathematics, Mathematics,     Biology, Computer Science, English Language</li>
+            <li>Top 1% in Academics</li>
+            <li>Founding President of Quantum Computing and    Artificial Intelligence Society</li>
+            <li>Beaconhouse Northern Pakistan Student Award </li>
         </div>
       </div>
    </div> 
