--- a/education.html
+++ b/education.html
@@ -309,16 +309,20 @@
 
       <div class="timeline-content timeline-card js--fadeInRight">
         <div>
-            <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
+            <div class="timeline-img-header" style="background-image: url('assets/images/education-page/CCH.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2022-2024</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h3 class="timelineHeading2">Cadet College Hasanabdal</h3>
+            <h6>Higher Secondary School Certificate</h6>
+            <li>President's Gold Medal Recipient</li>
+            <li>Awarded Catchpole Scholar Insignia (1/113) in Grade 11 & 12</li>
+            <li>Awarded Merit Scholarship (PKR. 270,000)</li>
+            <li>Vice-President Futuristic Systems Society</li>
+            <li>Duke of Edinburgh's Award</li>
+            <li>Student In-charge Library</li>
+            <li>Captain Cricket Team</li>
+            <li></li>
         </div>
       </div>
 
