--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Education</title>
+    <title>Ammad Hassan | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -14,15 +14,15 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
-    <meta property="og:title" content="John Doe | Education">
+    <meta property="og:title" content="Ammad Hassan | Education">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
 
-    <meta name="application-name" content="John Doe | Education" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Education" />
+    <meta name="application-name" content="Ammad Hassan | Education" />
+    <meta name="apple-mobile-web-app-title" content="Ammad Hassan | Education" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
@@ -261,7 +261,9 @@
                     <div class="px-md-5 p-3 col-md-6 d-flex flex-column align-items-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="dropdown1 main-heading mb-0 education_head">Educational <span class="edu_background">Background</span></h2>
                         <p class="dropdown2 pre-heading font-weight-bolder text-center animate__animated animate__fadeInUp animate__delay-2s">
-                            Cogito, ergo sum: "I think, therefore I am." – René Descartes 
+                            Cogito, ergo sum: 
+                                "I think, therefore I am." 
+                                        – René Descartes     
                             
                         </p>
                     </div>
@@ -335,15 +337,19 @@
       <div class="timeline-img"></div>
 
       <div class="timeline-content js--fadeInLeft">
-        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
-        <div class="date date3">2013-2017</div>
+        <div class="timeline-img-header" style="background-image: url('assets/images/education-page/AQ School.png'); background-repeat: no-repeat; background-size: auto"></div>
+        <div class="date date3">2020-2022</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
-            <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading3">A.Q. K. School of Science and Technology</h2>
+            <h6>Secondary School Certificate</h6>
+            <li>Honors Roll - 1/140</li>
+            <li>Awarded Emblem of Eminence</li>
+            <li>Student of the Year Award and Student Body Head Boy</li>
+            <li>School Record Score in SSC (1085/1100)</li>
+            <li>Awarded Federal Board of Education Academic Distinction - Top 40 out of 101370 students</li>
+            <li>Awarded Federal Board Merit Scholarship</li>
+            <li>Best Speaker and Skit Performer Award</li>
+            <li>Awarded Best in Discipline and Turn-out Award</li>
         </div>
       </div>
     </div>
