--- a/design.html
+++ b/design.html
@@ -22,8 +22,8 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/experience.html">
 
-        <meta name="application-name" content="John Doe | Experience" />
-        <meta name="apple-mobile-web-app-title" content="John Doe | Experience" />
+        <meta name="application-name" content="Ammad Hassan | Experience" />
+        <meta name="apple-mobile-web-app-title" content="Ammad Hassan | Experience" />
         <meta name="summary"
             content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
@@ -43,7 +43,7 @@
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
         <link id='favicon' rel="icon" href="assets/images/favicon.png" type="image/png">
         <!--Favicon-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+        <link rel="stylesheet" href="https://www.flaticon.com/free-icons/degree" title="degree icons">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
             integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
             crossorigin="anonymous" />
