--- a/experience.html
+++ b/experience.html
@@ -199,7 +199,7 @@
     
     
     <div>
-        <h4 class="text-center heading1 mcard">Hackathon <span class="my_experience">Participation</span></h4>
+        <h4 class="text-center heading1 mcard">Awards and <span class="my_experience">Achievements</span></h4>
 
         <!-- Mentorship Card -->
 
