--- a/experience.html
+++ b/experience.html
@@ -19,8 +19,8 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/experience.html">
 
-    <meta name="application-name" content="John Doe | Experience" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Experience" />
+    <meta name="application-name" content="Ammad Hassan | Experience" />
+    <meta name="apple-mobile-web-app-title" content="Ammad Hassan | Experience" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <!--For Dark/Light mode Toggle-->
@@ -172,7 +172,7 @@
             </div>
         </section>
 
-        <h4 class="text-center heading1 exp-head">Work <span class="my_experience">Experience</span></h4>
+        <h4 class="text-center heading1 exp-head">Experiences:<span class="my_experience">Academia and Entrepreneurship</span></h4>
 
         <!-- work experience Card -->
 
@@ -183,7 +183,7 @@
     </div>
 
     <div class="main1 pt-1">
-        <h4 class="text-center heading1">Open <span class="my_experience">Source</span></h4>
+        <h4 class="text-center heading1">Initiatives and <span class="my_experience">Societies</span></h4>
 
         <!-- Hackathon Section -->
 
