--- a/experience.html
+++ b/experience.html
@@ -183,7 +183,7 @@
     </div>
 
     <div class="main1 pt-1">
-        <h4 class="text-center heading1">Initiatives and <span class="my_experience">Societies</span></h4>
+        <h4 class="text-center heading1">Initiatives & <span class="my_experience">Societies</span></h4>
 
         <!-- Hackathon Section -->
 
@@ -199,7 +199,7 @@
     
     
     <div>
-        <h4 class="text-center heading1 mcard">Awards and <span class="my_experience">Achievements</span></h4>
+        <h4 class="text-center heading1 mcard">Awards & <span class="my_experience">Achievements</span></h4>
 
         <!-- Mentorship Card -->
 
