--- a/projects.html
+++ b/projects.html
@@ -299,7 +299,8 @@ add
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="main-heading mb-0 projects_head">My <span class="my_projects">Projects</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            My projects makes use of vast variety of latest technology tools. My best experience is to create Data Science projects and deploy them to web applications using cloud infrastructure.
+                            The focal point of my projects is to direct and lead powerful tools in AI such as RAG, Transformers, VLLMs and future innovations like Quantum Computing in Medicine for the benefit of everyone. I develop open-source projects and under my QubAI Society, a large number of students are getting benefitted by learning and applying these tools in their areas of interest. 
+				My best experience was my project Smile Saviors, which not only provided people of my village with free & accurate Diagnostic resources, but also became a reason I started QubAI to train students like myself.
                         </p>
                     </div>
                 </div>
